--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-	color:#fff;
 	font-family:ubuntu, arial, sans-serif;
-	background-color:#5077aa;
+	background-image:url("metalic-wood.jpg");
+	background-repeat:repeat;
+	color:#fff;
 	text-shadow:-1px 1px 1px #000;
-	font-size:1.3em;
-	margin-left: 0;
+	font-size:1.4em;
+	margin-top:0;
 }
 #wrapper {
 	margin:0 auto;
@@ -31,18 +32,15 @@ span.result {
 }
 span.error {
 	color:#f00;
-	vertical-align:middle;
 }
 footer {
-	background: #30579a;
-	min-width:100%;
-	border-top: solid 1px black;
-	border-bottom: solid 1px black;
-	padding: 0px 4px 4px 8px;
-}
-footer p {
-	font-size: 0.6em;
-	margin: 6px 1px;
+	margin:0 auto;
+	padding:10px 20px;
+	width:700px;
+	background-color: rgba(0, 0, 0, 0.2);
+	text-align:center;
+	font-size:0.7em;
+	border: solid 1px black;
 }
 #convFormat {
 	margin-top:0px;
