--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@ body {
 	font-size:1.4em;
 	margin-top:0;
 }
-
+#overlord {
+	margin:auto;
+	padding:0;
+	width:540px;
+}
 #header, #nav, #footer, #wrapper {
 	margin:0 auto;
 	max-width:500px;
