--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family:ubuntu, arial, sans-serif;
-	background-image:url("metaltiles.jpg");
+	background-image:url("metalic-wood.jpg");
 	background-repeat:repeat;
 	color:#fff;
 	text-shadow:-1px 1px 1px #000;
