--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
 	text-align:center;
 	font-size:0.7em;
 	border:1px solid black;
+	clear:both;
 }
 h1 {
 	text-decoration:underline;
@@ -69,10 +70,10 @@ h2 {
 	margin:0 0 80px 0;
 }
 .numericBox {
-	width: 4em;
+	width:4em;
 }
 span.result {
-	color: #0f0;
+	color:#0f0;
 }
 span.error {
 	color:#f00;
@@ -83,27 +84,23 @@ span.error {
 	font-size: 0.7em;
 	font-style:italic;
 }
-#selectTime, #dispTime {
-	display:block;
-	margin: 50px auto;
-	text-align: center;
-	font-size: 100px;
+.timeBox {
+	float:left;
+	width:32%;
+	text-align:center;
+	margin-right:2%;
+	margin-bottom: 2.5%;
+	padding:15px 0;
 }
-#dispTime {
-	display: none;
+.lastBox {
+	margin-right:0;
+}
+.timeBox span {
+	display:block;
+}
+.timeValue { 
+	font-size:500%;
 }
 #toggler {
 	width:100%;
 }
-select {
-	font-size:1em;
-	background:transparent;
-	color:white;
-	border:none;
-}
-option {
-	background-color:black;
-	padding:0;
-	margin:0;
-}
-
