--- a/css/style.css
+++ b/css/style.css
@@ -103,21 +103,24 @@ span.error {
 .timeValueSmall {
 	font-size:60px;
 }
+.button {
+	padding: 2px 10px 2px 10px;
+	border: 1px solid black;
+	border-radius: 6px;
+	box-shadow: black 0 0 2px;
+}
+.buttonUp {
+	background-color:rgba(0, 0, 0, 0.3);
+}
+.buttonDown {
+	background-color:rgba(0, 0, 0, 0.6);
+}
 #toggler {
 	clear:both;
 	display:block;
 	width:100%;
 	text-align:center;
-	padding-top:2px;
-	padding-bottom:2px;
-	border: 1px solid black;
-	border-radius: 6px;
-	box-shadow: black 0 0 4px;
+	padding: 2px 0 2px 0;
 }
-.togglerUp {
-	background-color:rgba(0, 0, 0, 0.5);
-}
-.togglerDown {
-	background-color:rgba(0, 0, 0, 0.7);
-}
+
 
