--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,8 @@ span.error {
 	font-size:60px;
 }
 .button {
+	display:inline-block;
+	margin:4px;
 	padding: 2px 10px 2px 10px;
 	border: 1px solid black;
 	border-radius: 6px;
@@ -118,9 +120,10 @@ span.error {
 #toggler {
 	clear:both;
 	display:block;
+	margin:0;
+	padding: 2px 0 2px 0;
 	width:100%;
 	text-align:center;
-	padding: 2px 0 2px 0;
 }
 
 
