--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,30 @@
 body {
-	font-family:ubuntu, arial, sans-serif;
-	background-image:url("metaltiles.jpg");
-	background-repeat:repeat;
-	color:#fff;
-	text-shadow:-1px 1px 1px #000;
-	margin-top:0;
-}
-#header, #nav, #footer, #wrapper {
-	margin:0 auto;
-	border:1px solid black;
-	border-top:none;
-	border-bottom:none;
-	max-width:900px;
-}
-#header {
-	background:rgba(0, 0, 0, 0.6);	
-	padding:10px 20px;
-}
-#nav {
-	background:rgba(0, 0, 0, 0.4);
-	max-width:940px;
+	font-family: Ubuntu, Verdana, arial, sans-serif;
+	background-image: url("metaltiles.jpg");
+	background-repeat: repeat;
+	color: #eee;
+	text-shadow: -3px 3px 3px black;
+	margin: 0;
+	padding: 0;
 }
 #wrapper {
-	background:rgba(0, 0, 0, 0.1);
-	padding:10px 20px;
+	margin: auto;
+	padding: 0;
+	max-width: 500px;
+	font-size:22px;
 }
-#footer {
-	padding:10px 20px;
-	background-color: rgba(0, 0, 0, 0.3);
-	text-align:center;
-	font-size:0.7em;
-	border:1px solid black;
-	clear:both;
+#wrapper p {
+	margin-left:15px;
+	margin-right:15px;
 }
 h1 {
-	text-decoration:underline;
-	text-shadow:-2px 2px 3px #000;
-	margin:0 0 10px 0;
-}
-h2 {
-	margin-top:10px;
-	margin-bottom:10px;
-}
-#nav ul {
-	list-style:none;
-	margin:0;
-	padding:0;
-}
-#nav ul li {
-	display:inline-block;
-}
-#nav a {
-	text-decoration:none;
-	padding:10px 10px;
-	min-width:100px;
-	display:inline-block;
+	font-size:65px;
 	text-align:center;
-	color:white;
-	border-left:1px solid gray;
 }
-#nav a#first {
-	border-left:none;
+a {
+	color: #0df;
 }
-#nav a:hover, #nav a:active {
-	background:cyan;
+a:hover {
+	color: #fd0;
 }
-.utill {
-	margin:0 0 80px 0;
-}
-.numericBox {
-	width:4em;
-}
-span.result {
-	color:#0f0;
-}
-span.error {
-	color:#f00;
-}
-#convFormat {
-	margin-top:0px;
-	margin-bottom:10px;
-	font-size: 0.7em;
-	font-style:italic;
-}
-.button {
-	display:inline-block;
-	margin:4px;
-	padding: 2px 10px 2px 10px;
-	border: 1px solid black;
-	border-radius: 6px;
-	box-shadow: black 0 0 2px;
-	vertical-align: middle;
-}
-.buttonUp {
-	background-color:rgba(0, 0, 0, 0.3);
-}
-.buttonDown {
-	background-color:rgba(0, 0, 0, 0.6);
-}
+
